# scholar-fulltext-fetcher

./: .ftf_institutional.local.json.example  .gitignore  A5三机制适配预研-141.md  A5凭据接入就绪包-149.md  A5即跑清单-189.md  A5接入框架就绪-176.md  A5放量执行顺序-441分片-route分类-145.md  A5机构订阅现状与still_missing可救前缀梳理-150.md  A5用户凭据接入指引-141.md  A5联调就绪核-credential-in-run验证与联调清单-177.md  AIP-T&F绑JA3探针-147.md  E2E验收结论-160.md  LICENSE  OpenAlex-key净增探针-140复验：X26-真下0-过QC0-key增量0.md  OpenAlex-key净增探针-176.md  PDF下载失败类型全面统计-631miss-157.md  QC黑名单增删diff-回写前-143.md  README.md  ROI-路线A-机构订阅代理.md  ROI-路线B-render_fetch.md  RSC governor 攻坚结果：补丁要点+真机0-8+真净增.md  Scholar人机验证绕过现状梳理-2026-149.md  Wiley pdfdirect URL bug 修复：改了啥+selftest.md  _split_batch4.py  _split_batches.py  adapter覆盖健壮性审计-141.md  coverage 口径重算规范与本波churn复盘-144.md  coverage收口149-干跑复核与阻断报告.md  coverage数字回填预清单-159.md  fulltext_fetcher资料-各源接口速查.md  oa_resolver.py  pyproject.toml  route-B RSC 0-8 归零因与收口结论-160.md  route-B-Phase1冒烟结果-146.md  route-B-Phase2全量A集发射checklist-142.md  run_all.py  run_all_selftests.py  selftest覆盖盘点-141.md  still_missing三方核对-174.md  val500_input.txt  (+188 more)
.cursor/rules/: pchat.mdc
.github/workflows/: ci.yml
OpenAlex-key净增探针-155：返回X/真下Y/: 过QC净增Z + 样例DOI.md
a5_shards/: _all_441.txt  acs.txt  aip.txt  csj.txt  ecs.txt  elsevier.txt  iop.txt  other.txt  pleiades.txt  rsc.txt  springer.txt  taylorfrancis.txt  wiley.txt
examples/: sample_dois.txt
fulltext_fetcher/: __init__.py  __main__.py  aio.py  api.py  bench_free_methods.py  browser_search.py  citations.py  cli.py  config.py  download.py  ezproxy.py  flaresolverr.py  http_client.py  ingest.py  landing.py  logsetup.py  models.py  pipeline.py  publisher_adapter.py  render_fetch.py  report.py  requirements.txt  resolve.py  scholar_serpapi.py  selftest_e2e.py  selftest_institutional.py  snapshot.py  snapshot_bootstrap.py  zotero.py
fulltext_fetcher/institutional/: __init__.py  assisted_auth.py  auth_session.py  cookie_store.py  credential_store.py  ezproxy_login.py  login_browser.py  route_b_bridge.py  selftest_a5_framework.py
fulltext_fetcher/scholar/: __init__.py  __main__.py  captcha.py  cli.py  config.py  download.py  fetcher.py  logsetup.py  models.py  naming.py  pipeline.py  proxy.py  query.py  selftest_e2e.py  serp.py
fulltext_fetcher/sources/: __init__.py  aggregators.py  base.py  free_adapters.py  green_oa.py  oa_button.py  preprints.py  publisher_direct.py  publisher_oa.py  repositories.py  scihub.py  snapshot_source.py  wayback.py  websearch.py
poc/: .gitignore  README.md  openalex_oa_pipeline.py  scholar_multi_pipeline.py
poc/self_built_stack/: README.md  requirements.txt  scholar_self_built_demo.py
tools/: _build_wayback_input.py  aggregate_batch4.py  build_coverage.py  consolidate_delivery.py  dedup_recover_input.py  flaresolverr_nodriver.py  qc_content_match.py  qc_move_rejected.py  regress_qc_union_189.py  shard_cf_by_publisher.py  title_probe.py
